--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
@@ -118,8 +118,8 @@
                                             <p:inputText value="#{info.tipotrabajador.nombre}" id="editarTipoTrabajador" style=" border-radius: 0px; width: 97%;text-transform: uppercase; height: 12px;"> 
                                                 <p:ajax event="change" listener="#{controlVigenciaTipoTrabajador.modificarVTT(indice, 'TIPOTRABAJADOR', info.tipotrabajador.nombre)}"/>
                                                 <p:ajax event="select" listener="#{controlVigenciaTipoTrabajador.cambiarIndice(indice, 1)}" />
-                                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndex(indice, 0)}"/>
-                                                <!--<p:ajax event="dblclick" listener="# {controlVigenciaTipoTrabajador.asignarIndex(indice, 0, 0, 0)}"/>-->
+                                                <!--<p:ajax event="dblclick" listener="# {controlVigenciaTipoTrabajador.asignarIndex(indice, 0)}"/>-->
+                                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndex(indice, 0, 0, 0)}"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
@@ -195,37 +195,38 @@
                             <p:inputText onclick="select();" id="clasePension" value="#{controlVigenciaTipoTrabajador.pensionVigencia.clase.descripcion}" style="position: absolute; left: 5px; top: 85px; width: 175px; height: 13px">
                                 <p:ajax event="click" listener="#{controlVigenciaTipoTrabajador.validarRegistroSeleccionadoPensionado()}"  process="@this"/>
                                 <p:ajax event="change" listener="#{controlVigenciaTipoTrabajador.cambiosPension()}" update="clasePension"/>
-                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndexClasePensionados(indice, 0, 0)}"/>
-                                <!--<p:ajax event="dblclick" listener="# {controlVigenciaTipoTrabajador.asignarIndex(indice, 0, 0, 1)}"/>-->
+                                <!--<p:ajax event="dblclick" listener="# {controlVigenciaTipoTrabajador.asignarIndexClasePensionados(indice, 0, 0)}"/>-->
+                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndex(indice, 0, 0, 1)}"/>
                             </p:inputText>
-                            <p:commandButton value="" process="@this" icon="ui-icon-search" actionListener="#{controlVigenciaTipoTrabajador.listaValoresBotonClasePensionado()}" style="position: absolute; left: 190px; top: 85px; height: 23px; width: 23px"/>
+                           <!-- <p:commandButton value="" process="@this" icon="ui-icon-search" actionListener="#{controlVigenciaTipoTrabajador.listaValoresBoton()}" style="position: absolute; left: 190px; top: 85px; height: 23px; width: 23px"/>-->
+                            <p:commandButton value="" process="@this" icon="ui-icon-search" action="clasepension" style="position: absolute; left: 190px; top: 85px; height: 23px; width: 23px"/>
 
-                            <h:outputText value="#{msg['tipoP']}:" style="position: absolute; left: 230px; top: 70px"/>
-                            <p:inputText onclick="select();" id="tipoPensionado" value="#{controlVigenciaTipoTrabajador.pensionVigencia.tipopensionado.descripcion}" style="position: absolute; left: 230px; top: 85px; width: 120px; height: 13px">
-                                <p:ajax event="click" listener="#{controlVigenciaTipoTrabajador.validarRegistroSeleccionadoPensionado()}"  process="@this" immediate="true"/>
-                                <p:ajax event="change" listener="#{controlVigenciaTipoTrabajador.cambiosPension()}" update="tipoPensionado" process="@this"/>       
-                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndexClasePensionados(indice, 0, 1)}"/>
-                                <!--<p:ajax event="dblclick" listener="# {controlVigenciaTipoTrabajador.asignarIndex(indice, 1, 0, 1)}}" process="@this"/>-->
+                              <h:outputText value="#{msg['tipoP']}:" style="position: absolute; left: 230px; top: 70px"/>
+                             <p:inputText onclick="select();" id="tipoPensionado" value="#{controlVigenciaTipoTrabajador.pensionVigencia.tipopensionado.descripcion}" style="position: absolute; left: 230px; top: 85px; width: 120px; height: 13px">
+                               <!-- <p:ajax event="click" listener="#{controlVigenciaTipoTrabajador.validarRegistroSeleccionadoPensionado()}"  process="@this"/>-->
+                                <p:ajax event="change" listener="#{controlVigenciaTipoTrabajador.cambiosPension()}" update="tipoPensionado"/>
+                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndex(indice, 1, 0, 1)}" immediate="true"/>
                             </p:inputText>
-                            <p:commandButton value="" process="@this" actionListener="#{controlVigenciaTipoTrabajador.listaValoresBotonTipoPensionado()}" icon="ui-icon-search" style="position: absolute; left: 361px; top: 85px; height: 23px; width: 23px"/>
+                            <p:commandButton value="" process="@this" actionListener="#{controlVigenciaTipoTrabajador.asignarIndex(indice, 1, 0, 1)}" icon="ui-icon-search" style="position: absolute; left: 361px; top: 85px; height: 23px; width: 23px"/>
+                            <!--      <p:commandButton value="" process="@this" action="tipopensionado" icon="ui-icon-search" style="position: absolute; left: 361px; top: 85px; height: 23px; width: 23px"/>-->
 
                             <h:outputText value="#{msg['nombreP']}:" style="position: absolute; left: 5px; top: 113px"/>
                             <p:inputText onclick="select();" id="causaBiente" value="#{controlVigenciaTipoTrabajador.pensionVigencia.causabiente.persona.nombre}" style="position: absolute; left: 5px; top: 129px; width: 270px; height: 13px">
                                 <p:ajax event="click" listener="#{controlVigenciaTipoTrabajador.validarRegistroSeleccionadoPensionado()}" immediate="true" process="@this"/>
                                 <p:ajax event="change" listener="#{controlVigenciaTipoTrabajador.cambiosPension()}" update="causaBiente" process="@this"/>
-                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndexClasePensionados(indice, 0, 2)}"/>
-                           <!--     <p:ajax event="dblclick" listener="# {controlVigenciaTipoTrabajador.asignarIndex(indice, 2, 0, 1)}" process="@this"/>-->
+                                <!--    <p:ajax event="dblclick" listener="# {controlVigenciaTipoTrabajador.asignarIndexClasePensionados(indice, 0, 2)}"/>-->
+                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndex(indice, 2, 0, 1)}" immediate="true"/>
                             </p:inputText>
-                            <p:commandButton value="" process="@this" icon="ui-icon-search" actionListener="#{controlVigenciaTipoTrabajador.listaValoresBotonCausaBientes()}" style="position: absolute; left: 286px; top: 129px; height: 23px; width: 23px"/>
+                           <!-- <p:commandButton value="" process="@this" icon="ui-icon-search" actionListener="#{controlVigenciaTipoTrabajador.listaValoresBoton()}" style="position: absolute; left: 286px; top: 129px; height: 23px; width: 23px"/>-->
 
                             <h:outputText value="#{msg['nombretutorP']}:" style="position: absolute; left: 5px; top: 155px"/>
                             <p:inputText onclick="select();" id="tutorPension" value="#{controlVigenciaTipoTrabajador.pensionVigencia.tutor.nombreCompleto}" style="position: absolute; left: 5px; top: 170px; width: 270px; height: 13px">
-                                <!--<p:ajax event="dblclick" listener="# {controlVigenciaTipoTrabajador.asignarIndex(indice, 3, 0, 1)}"  process="@this"/>      -->  
-                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndexClasePensionados(indice, 0, 3)}"/>
+                                <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndex(indice, 3, 0, 1)}"  process="@this"/>    
+                                <!-- <p:ajax event="dblclick" listener="# {controlVigenciaTipoTrabajador.asignarIndexClasePensionados(indice, 0, 3)}"/>  -->  
                                 <p:ajax event="click" listener="#{controlVigenciaTipoTrabajador.validarRegistroSeleccionadoPensionado()}"  process="@this"/>
                                 <p:ajax event="change" listener="#{controlVigenciaTipoTrabajador.cambiosPension()}" update="tutorPension"/>
                             </p:inputText> 
-                            <p:commandButton value="" process="@this" icon="ui-icon-search" actionListener="#{controlVigenciaTipoTrabajador.listaValoresBotonTutor()}" style="position: absolute; left: 286px; top: 170px; height: 23px; width: 23px"/>
+                           <!-- <p:commandButton value="" process="@this" icon="ui-icon-search" actionListener="#{controlVigenciaTipoTrabajador.listaValoresBoton()}" style="position: absolute; left: 286px; top: 170px; height: 23px; width: 23px"/>-->
 
                             <p:commandButton value="#{msg['limpiar']}" id="LimpiarPensionados" style="position: absolute; left: 320px; top: 160px;" actionListener="#{controlVigenciaTipoTrabajador.limpiarPension()}" process="@this" icon="ui-icon-trash"/>
                         </p:panel>
