--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -15,10 +15,9 @@
                             <fieldset style="position: absolute; left: 5px;height: 101px; width: 225px; border-radius: 10px">
                                 <legend style=" color: blue;width: 210px"><strong>Novedades Fijas y Ocasionales</strong></legend>
                                 <h:graphicImage value="Imagenes/IconNFYO.gif" style="position: absolute; top: 18px; left: 5px; width: 35px  ; height: 50px "/>
-                                <p:commandButton style="position: absolute; left: 45px; width: 180px;top:21px; height: 25px ;" value="Por Empleado..." actionListener="#{controlNovedad.recibir('por empleado...')}" action="novedadempleado"/>
-                               
-                                <p:commandButton style="position: absolute;top: 50px; left: 45px; width: 180px; height: 25px ;" value="Por Concepto..." action="novedadconcepto" />
-                                <p:commandButton style="position: absolute;top: 79px; left: 45px; width: 180px; height: 25px ;" value="Por Tercero..." actionListener="#{controlNovedad.recibir('por Tercero...')}" action="Impresion"/>
+                                <p:commandButton style="position: absolute;top: 21px; left: 45px; width: 180px; height: 25px;" value="Por Empleado..." action="novedadempleado"/>
+                                <p:commandButton style="position: absolute;top: 50px; left: 45px; width: 180px; height: 25px;" value="Por Concepto..." action="novedadconcepto" />
+                                <p:commandButton style="position: absolute;top: 79px; left: 45px; width: 180px; height: 25px;" value="Por Tercero..."  action="novedadtercero"/>
                             </fieldset>
                             <fieldset style="position: absolute; left: 5px;top: 130px ;height: 101px; width: 225px; border-radius: 10px">
                                 <legend style=" color: blue"><strong>Viaticos</strong></legend>
@@ -36,8 +35,7 @@
                             <fieldset style="position: absolute; left: 5px;top: 343px ;height: 71px; width: 225px;;height:40px ; border-radius: 10px">
                                 <legend style=" color: blue"><strong>Archivo Plano</strong></legend>
                                 <h:graphicImage value="Imagenes/archivoplanoNovedad.gif" style="position: absolute; top: 15px; left: 10px; width: 25px  ; height: 31px "/>
-                                <p:commandButton style="position: absolute;top:18px;left: 45px; width: 180px; height: 25px; " value="Cargue De Novedades" action="novedadPlano">
-                                </p:commandButton>
+                                <p:commandButton style="position: absolute;top:18px;left: 45px; width: 180px; height: 25px; " value="Cargue De Novedades" action="novedadPlano"/>
                             </fieldset>
                             <fieldset style="position: absolute; left: 265px;height: 250px; width: 265px; border-radius: 10px">
                                 <legend style=" color: blue"><strong>Administracion De Tiempos</strong></legend>
