--- a/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
@@ -12,7 +12,6 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-
                     <f:loadBundle basename="Recursos.concepto" var="msg"/>
                     <p:growl id="growl" showDetail="true"/> 
 
@@ -106,7 +105,28 @@
                                          liveScroll="true" scrollRows="40" filteredValue="#{controlConcepto.filtradoConceptosEmpresa}" emptyMessage="#{msg['vacio']}" 
                                          widgetVar="datosConceptos" editable="true" editMode="cell" selection="#{controlConcepto.seleccionConceptoEmpresa}" selectionMode="single">
 
+                                <f:event type="preRenderView" listener="#{controlConcepto.recordarSeleccion()}"/>
                                 <p:ajax event="filter" listener="#{controlConcepto.eventoFiltrar()}"/>
+                                <p:ajax event="sort" listener="#{controlConcepto.eventoSort()}"/>
+
+                                <p:column id="columnaDetalleConcepto" width="19" style="padding-left: 5px;padding: 0px; text-align: center" >                                                              
+                                    <f:facet name="header">
+                                        <h:outputText id="DetalleC" value="D"/>
+                                        <p:tooltip for="DetalleC" value="Detalle Concepto"/>
+                                    </f:facet>
+                                    <p:cellEditor>  
+                                        <f:facet name="output"><img src="http://icon.medownloads.com/32x32/19/27/4513084.a3d670e290b7639645dceda7795c4222.png" width="18" height="18" /></f:facet>  
+                                        <f:facet name="input">
+                                            <p:inputText value="D" maxlength="1" style="background-color: blue; width: 6px; height: 6px" id="editarD">
+                                                <p:ajax event="select" listener="#{controlConcepto.verDetalle(indice)}" immediate="#{controlDetalleConcepto.obtenerConcepto(concepto.secuencia)}"/>
+                                            </p:inputText>
+                                        </f:facet>
+                                    </p:cellEditor>
+                                    <f:facet name="footer">
+                                        <h:outputText value=""/>
+                                    </f:facet>
+                                </p:column>
+
 
                                 <p:column sortBy="#{concepto.codigo}" filterBy="#{concepto.codigo}" filterMatchMode="contains" id="columnaCodigo"
                                           width="35" filterStyle="display: none; visibility: hidden;" style="padding-left: 6px" >                                  
@@ -119,7 +139,7 @@
                                         <f:facet name="input">
                                             <p:inputText value="#{concepto.codigo}" id="editarCodigo" maxlength="8" style="border-radius: 0px; width: 93.5%; text-transform: uppercase"> 
                                                 <p:ajax event="change" listener="#{controlConcepto.modificarConcepto(indice, 'COD', concepto.codigo)}"/>
-                                                <p:ajax event="select" listener="#{controlConcepto.cambiarIndice(indice, 0)}" />
+                                                <p:ajax event="select" listener="#{controlConcepto.cambiarIndice(indice, 0)}"  />
                                                 <pe:keyFilter for="editarCodigo" mask="num"/>
                                             </p:inputText>
                                         </f:facet>  
@@ -393,8 +413,8 @@
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <h:outputText value="#{msg['cncc']}"  style="color: #14388B; font-weight: bold; position: absolute; left: 380px"/>
-                            <p:commandButton icon="ui-icon-transfer-e-w" actionListener="#{controlConcepto.lovConcepto(1)}"  style="position: absolute; top: 32px; left: 380px" process="@this"/>
-                            <p:inputText id="descripcionClon" widgetVar="descripcionClon" value="#{controlConcepto.conceptoOriginal.informacionConcepto}" style="position: absolute; top: 35px; left: 408px; width: 350px;">
+                            <p:commandButton icon="ui-icon-transfer-e-w" actionListener="#{controlConcepto.lovConcepto(1)}"  style="position: absolute; top: 32px; left: 745px" process="@this"/>
+                            <p:inputText id="descripcionClon" widgetVar="descripcionClon" value="#{controlConcepto.conceptoOriginal.informacionConcepto}" style="position: absolute; top: 35px; left: 380px; width: 350px;">
                                 <p:ajax event="change" listener="#{controlConcepto.lovConcepto(1)}" update="@this"/>
                             </p:inputText>
                             <p:commandButton value="#{msg['clonar']}" actionListener="#{controlConcepto.clonarConcepto()}" 
@@ -414,10 +434,10 @@
 
                         <p:commandButton style="position: absolute; left: 683px; top: 500px;" id="ACEPTAR" value="#{msg['aceptar']}" icon="ui-icon-check" 
                                          onclick="confirmarGuardar.show();" disabled="#{controlConcepto.guardado}"  process="@this" />
-                        <p:commandButton disabled="#{controlConcepto.activoDetalle}" id="DETALLES" value="" process="@this" action="detalleConcepto" 
-                                         actionListener="#{controlDetalleConcepto.obtenerConcepto(controlConcepto.conceptoRegistro.secuencia)}"
+                        <!--<p:commandButton disabled="#/{controlConcepto.activoDetalle}" id="DETALLES" value="" process="@this" action="detalleConcepto" 
+                                         actionListener="#/{controlDetalleConcepto.obtenerConcepto(controlConcepto.conceptoRegistro.secuencia)}"
                                          style="background-image: url(Imagenes/revisar.jpg); background-size: 100% 100%; background-repeat: no-repeat;position: absolute; width: 28px; height: 28px; left: 590px; top: 378px;" />
-                        <p:tooltip  for="DETALLES" value="#{msg['detalle']}" />
+                        <p:tooltip  for="DETALLES" value="#/{msg['detalle']}" />-->
                         <p:commandButton style="position: absolute; left: 775px; top: 500px;" id="ATRAS" action="#{controlConcepto.redirigir()}" value="#{msg['cancelar']}" 
                                          icon="ui-icon-closethick" actionListener="#{controlConcepto.refrescar()}" process="@this" />
                         <h:outputText id="informacionRegistro" value="#{controlConcepto.infoRegistro}" style="position: absolute; left: 15px; top: 355px; font-weight: bold"/>
