--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -66,7 +66,7 @@
                             <fieldset style="position: absolute;top: 154px ; left: 565px  ;height: 81px;width: 270px; border-radius: 10px;">
                                 <legend style=" color: blue;width: 65px"><strong>Vacaciones</strong></legend>
                                 <h:graphicImage value="Imagenes/SolVaciones.gif" style="position: absolute; top: 18px; left: 5px; width: 50px  ; height: 60px "/>
-                                <p:commandButton style="position: absolute; left: 90px;top: 19px; width: 190px; height: 25px ;" value="vacaciones" actionListener="#{controlNovedad.recibir('Vacaciones')}" action="Impresion"></p:commandButton>
+                                <p:commandButton style="position: absolute; left: 90px;top: 19px; width: 190px; height: 25px ;" value="vacaciones" actionListener="#{controlNovedadesVacaciones.recibirPag('novedad')}" action="vacaciones" ></p:commandButton>
                                 <p:commandButton style="position: absolute;top: 55px; left: 90px; width: 190px; height: 25px ;" value="Programacion Vacaciones" actionListener="#{controlNovedad.recibir('Programacion Vacaciones')}" action="Impresion"></p:commandButton>
                             </fieldset>
                             <fieldset style="position: absolute;top: 258px ; left: 565px  ;height: 125px;width: 270px; border-radius: 10px;">
