--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -14,74 +14,74 @@
         <title>..::Designer.NOM::..</title>
     </h:head>
 
-    <h:body onload="iniciarScrollEmpleado();" style="background-image: url(Imagenes/sinImagen.png);">
-        <div id="top" class="top" style="background-image: url(Imagenes/encabezadotemplate.png); background-size: 100% 100%; background-repeat: repeat-x; position: absolute; top: 0px; left: 0px; width: 100%; height: 20px;">
-            <ui:insert name="banner">
-                <h:form>
-                    <div>
-                        <!--<p:commandLink id="acercade" action="#{controlTemplate.obtenerAcercaDe}">-->
-                        <a href="https://www.nomina.com.co" target="_blank">
-                            <p:graphicImage value="Imagenes/Designer.png" alt="Logo Designer" style="position: absolute; top:0px; height: 31px; "/>
-                        </a>
-                        <!--</p:commandLink>-->
-                        <h:outputText value="Su compañ&iacute;a de tecnolog&iacute;a y consultor&iacute;a en n&oacute;mina y talento humano desde 1998" style="position: absolute; left: 120px; top:9px; color: #0000FF; font-weight: bold;"/>
-                        <a href="https://www.nomina.com.co/soporte/descargas/file/43-teamviewer3.html" target="_blank">
-                            <h:outputText value="#{controlTemplate.linkSoporte}" style="position: absolute; left: 1040px; top:9px; color: #0000FF; text-decoration: underline;"/>
-                        </a>
-                        <p:separator id="separador1" style="position: absolute; top:25px; left: 0px; width:99.2%; height:8px; color: #0000FF; background-color: #0000FF; border-color: transparent; border-radius: 0px; box-shadow: none;"/>
-                    </div>
-                </h:form>
-            </ui:insert>
-        </div>
-        <div id="left" style="position: absolute; top:26px;">
+    <h:body onload="iniciarScrollEmpleado();" >
+        <div id="left" style="position: absolute; left: 0px; top:0px; width: 220px; height: 600px; padding-left: 5px; padding-right: 5px; background-image: url(Imagenes/encabezadotemplate.png); background-size: 100% 100%; background-repeat: repeat;">
             <ui:insert name="left">
                 <h:form>
-                    <table border="0px;">
-                        <tr>
-                            <td align="center">
-                                <p:clock id="clock" pattern=" dd/MM/yyyy - HH:mm:ss" mode="server"/>
-                                <p:separator id="separador2" style="border-style: inset; position: relative; top: 11px; border-width: 1px; border-style: solid; color:#717171;"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="center">
-                                <h:outputText value="Licencia de uso a:" style="font-weight: bold"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <br/>
-                            <td align="center">
-                                <h:outputText id="empresa"  style="font-weight: bold;" value="#{controlTemplate.detalleEmpresa.empresa.nombre} - Nit. #{controlTemplate.detalleEmpresa.empresa.nit}- Tel. #{controlTemplate.detalleEmpresa.telefono}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <br/>
-                            <td align="center">
-                                <p:graphicImage  value="#{controlTemplate.logoEmpresa}" height="60" width="180" alt="Logo Empresa"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="center" >
-                                <p:graphicImage value="#{controlTemplate.fotoUsuario}"  height="130" width="110" alt="Foto Usuario" />
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="center">
-                                <h:outputText value="#{controlTemplate.nombreUsuario}" style="font-weight: bold;"/>
-                                <p:separator id="separador3" style="border-style: inset; border-width: 1px; border-style: solid; color:#717171;"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="center">
-                                <p:commandButton value="Cerrar Sesi&oacute;n" actionListener="#{controlTemplate.cerrarSession()}" styleClass="cssBotonCerrarSesion"/>
-                            </td>
-                        </tr>
-                    </table>
+                    <a href="https://www.nomina.com.co" target="_blank">
+                        <p:graphicImage value="Imagenes/Designer.png" alt="Logo Designer" style="height: 65px; "/>
+                    </a>
+                    <br/>
+                    <p:panel id="licencia" header="LICENCIA DE USO A:" style="width: 213px; box-shadow: 5px 5px 5px 0px rgba(0,12,92,1); padding: 0px; ">
+                        <h:panelGrid columns="1" cellpadding="0" style="font-size: 10px; width: 100%; left: 0px; padding: 0px;">
+                            <center>
+                                <p:graphicImage  value="#{controlTemplate.logoEmpresa}" alt="Logo Empresa" style="width: 100%;"/>
+                                <h:outputText id="empresa"  style="font-weight: bold;" value="#{controlTemplate.detalleEmpresa.empresa.nombre}"/>
+                                <h:outputText id="nit"  style="font-weight: bold;" value="NIT: #{controlTemplate.detalleEmpresa.empresa.nit}"/>
+                                <h:outputText id="tel"  style="font-weight: bold;" value="TEL: #{controlTemplate.detalleEmpresa.telefono}"/>
+                            </center>
+                        </h:panelGrid>
+                    </p:panel>
+                    <br/>
+                    <p:panel id="pnUsuario" header="USUARIO CONECTADO" style="width: 213px; box-shadow: 5px 5px 5px 0px rgba(0,12,92,1); padding: 0px;">
+                        <h:panelGrid columns="2" cellpadding="0" style="font-size: 10px;">
+                            <p:graphicImage value="#{controlTemplate.fotoUsuario}"  height="100" alt="Foto Usuario" />
+                            <h:column>
+                                <center>
+                                    <h:outputText value="#{controlTemplate.nombreUsuario}" style="font-weight: bold;"/>
+                                </center>
+                            </h:column>
+                        </h:panelGrid>
+                    </p:panel>
+                    <br/>
+                    <p:panel id="izperiodo" header="PERIODO EN EL TIEMPO" style="width: 213px; box-shadow: 5px 5px 5px 0px rgba(0,12,92,1); padding: 0px;">
+                        <h:panelGrid columns="1" cellpadding="0" style="font-size: 10px;">
+                            <center>
+                                <h:outputText id="fdesde"  style="font-weight: bold;" value="Fecha desde: #{controlTemplate.detalleEmpresa.empresa.nombre}"/>
+                                <h:outputText id="fhasta"  style="font-weight: bold;" value="Fecha hasta:  #{controlTemplate.detalleEmpresa.empresa.nit}"/>
+                                <h:outputText id="fcorte"  style="font-weight: bold;" value="Fecha corte: #{controlTemplate.detalleEmpresa.telefono}"/>
+                            </center>
+                        </h:panelGrid>
+                    </p:panel>
+                    <br/>
+                    <p:panel id="periodo" header="ALERTAS" style="width: 213px; box-shadow: 5px 5px 5px 0px rgba(0,12,92,1); padding: 0px;">
+                        <h:panelGrid columns="1" cellpadding="0" style="font-size: 10px;">
+                            <center>
+                                <h:outputText id="msjalertas"  style="font-weight: bold;" value=""/>
+                            </center>
+                        </h:panelGrid>
+                    </p:panel>
                 </h:form>
             </ui:insert>
         </div>
-        <div id="content" class="left_content" style="position: absolute; top:40px;">
-            <ui:insert name="body" />
+        <div id="pnlRight" class="pnlRight_content">
+            <div id="top" class="top">
+                <ui:insert name="banner">
+                    <h:form>
+                        <div>
+                            <a href="https://www.nomina.com.co/soporte/descargas/file/43-teamviewer3.html" target="_blank">
+                                <p:graphicImage value="Imagenes/Designer.png" alt="Logo Designer" style="left: 0px; height: 30px; "/>
+                            </a>
+                            <p:commandButton value="" style="background-image: url(Imagenes/Iconos/buscardb.png); background-size: 100% 100%; background-repeat: no-repeat; width: 90px; height: 30px; position: absolute; left: 790px;" actionListener="#{controlTemplate.cerrarSession()}" />
+                        </div>
+                    </h:form>
+                </ui:insert>
+            </div>
+            <div id="content" class="left_content">
+                <ui:insert name="body" />
+                <h:outputLabel style="position: absolute; left: 348px; top: 545px; width: 550px; font-size: 9px; font-weight: bold; color: #003382" 
+                               value="Designer Software Ltda. - Su compa&ntilde;&iacute;a de Tecnolog&iacute;a y Consultor&iacute;a en N&oacute;mina y Talento Humano desde 1998"/>
+            </div>
         </div>
     </h:body>
 </html>
