--- a/DesignerRHN/DesignerRHN-war/web/emplacumulados.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplacumulados.xhtml
@@ -13,6 +13,7 @@
                 <h:form id="form"> 
                     <f:loadBundle basename="Recursos.emplacumulados" var="msg" />
                     <p:panel  id="PanelTotal" header="#{msg['titulo']}" style="position: absolute; width: 874px; height: 510px; text-align: left">  
+                        <h:outputText style="position: absolute; top: 50px; height: 12px;position: absolute;color: #BF1A1A; font-weight: bold;text-align: right;width: 240px;left: 600px;" id="nombreEmpleado" value="#{controlEmplAcumulados.empleadoSeleccionado.persona.nombreCompleto}"/>
                         <fieldset style="position: absolute;top: 80px;left: 10px;height: 350px;width: 830px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 14px; color: blue"><strong>#{msg['acumulados']}</strong></legend>
 
