--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -61,7 +61,7 @@
                                 <h:graphicImage value="Imagenes/LiquidacionDefinitivaNPFN.gif" style="position: absolute; top: 98px; left: 20px; width: 30px  ; height: 33px "/>
                                 <p:commandButton style="position: absolute; left: 90px;top: 25px; width: 190px; height: 25px ;" value="Pago Parcial De Cesantia" actionListener="#{controlNovedad.recibir('Pago Parcial De Cesantia')}" action="Impresion" ></p:commandButton>
                                 <p:commandButton style="position: absolute;top: 63px; left: 90px; width: 190px; height: 25px ;" value="Auxilios" actionListener="#{controlNovedad.recibir('Auxilios')}"  action="Impresion" ></p:commandButton>
-                                <p:commandButton style="position: absolute;top: 100px; left: 90px; width: 190px; height: 25px ;" value="Liquidacion Definitiva" actionListener="#{controlNovedad.recibir('Liquidacion Definitiva')}" action="Impresion" ></p:commandButton>
+                                <p:commandButton style="position: absolute;top: 100px; left: 90px; width: 190px; height: 25px ;" value="Liquidacion Definitiva" actionListener="#{controlNovedadesDefinitivas.recibirPagina('novedad')}" action="definitivas" ></p:commandButton>
                             </fieldset>
                             <fieldset style="position: absolute;top: 154px ; left: 565px  ;height: 81px;width: 270px; border-radius: 10px;">
                                 <legend style=" color: blue;width: 65px"><strong>Vacaciones</strong></legend>
